Src/Newt/NewtonDynamics/Import/Newton.h

typedef struct NewtonBody{} NewtonBody;
typedef struct NewtonWorld{} NewtonWorld;
typedef struct NewtonJoint{} NewtonJoint;
typedef struct NewtonMaterial{} NewtonMaterial;
typedef struct NewtonJointRecord NewtonJointRecord;
typedef struct NewtonHingeSliderUpdateDesc NewtonHingeSliderUpdateDesc;
struct NewtonJointRecord
{
  dFloat m_attachmenMatrix_0[4][4];
  dFloat m_attachmenMatrix_1[4][4];
  dFloat m_minLinearDof[3];
  dFloat m_maxLinearDof[3];
  dFloat m_minAngularDof[3];
  dFloat m_maxAngularDof[3];
  const NewtonBody* m_attachBody_0;
  const NewtonBody* m_attachBody_1;
  dFloat m_extraParameters[16];
  int	m_bodiesCollisionOn;
  char m_descriptionType[32];
} ;
struct NewtonHingeSliderUpdateDesc
{
  dFloat m_accel;
  dFloat m_minFriction;
  dFloat m_maxFriction;
  dFloat m_timestep;
} ;
typedef int (*NewtonGetBuoyancyPlane) (const int collisionID, void* const context, const dFloat* const globalSpaceMatrix, dFloat* const globalSpacePlane);
typedef void (*NewtonCollisionIterator) (void* const userData, int vertexCount, const dFloat* const faceArray, int faceId);
typedef void (*NewtonBallCallBack) (const NewtonJoint* const ball, dFloat timestep);
typedef unsigned (*NewtonHingeCallBack) (const NewtonJoint* const hinge, NewtonHingeSliderUpdateDesc* const desc);
typedef unsigned (*NewtonSliderCallBack) (const NewtonJoint* const slider, NewtonHingeSliderUpdateDesc* const desc);
typedef unsigned (*NewtonCorkscrewCallBack) (const NewtonJoint* const corkscrew, NewtonHingeSliderUpdateDesc* const desc);
typedef void (*NewtonConstraintDestructor) (const NewtonJoint*const  me);
NEWTON_API void  NewtonBodyGetMatrix(const NewtonBody* const body, dFloat* const matrix);
NEWTON_API void  NewtonBodyGetRotation(const NewtonBody* const body, dFloat* const rotation);
NEWTON_API void  NewtonBodyGetMassMatrix (const NewtonBody* const body, dFloat* mass, dFloat* const Ixx, dFloat* const Iyy, dFloat* const Izz);
NEWTON_API void  NewtonBodyGetInvMass(const NewtonBody* const body, dFloat* const invMass, dFloat* const invIxx, dFloat* const invIyy, dFloat* const invIzz);
NEWTON_API void  NewtonBodyGetOmega(const NewtonBody* const body, dFloat* const vector);
NEWTON_API void  NewtonBodyGetVelocity(const NewtonBody* const body, dFloat* const vector);
NEWTON_API void  NewtonBodyGetForce(const NewtonBody* const body, dFloat* const vector);
NEWTON_API void  NewtonBodyGetTorque(const NewtonBody* const body, dFloat* const vector);
NEWTON_API void  NewtonBodyGetForceAcc(const NewtonBody* const body, dFloat* const vector);
NEWTON_API void  NewtonBodyGetTorqueAcc(const NewtonBody* const body, dFloat* const vector);
NEWTON_API void  NewtonBodyGetCentreOfMass (const NewtonBody* const body, dFloat* const com);
NEWTON_API dFloat NewtonBodyGetLinearDamping (const NewtonBody* const body);
NEWTON_API void  NewtonBodyGetAngularDamping (const NewtonBody* const body, dFloat* const vector);
NEWTON_API void  NewtonBodyGetAABB (const NewtonBody* const body, dFloat* const p0, dFloat* const p1);
NEWTON_API NewtonJoint* NewtonBodyGetFirstJoint (const NewtonBody* const body);
NEWTON_API NewtonJoint* NewtonBodyGetNextJoint (const NewtonBody* const body, const NewtonJoint* const joint);
NEWTON_API NewtonJoint* NewtonBodyGetFirstContactJoint (const NewtonBody* const body);
NEWTON_API NewtonJoint* NewtonBodyGetNextContactJoint (const NewtonBody* const body, const NewtonJoint* const contactJoint);
NEWTON_API void* NewtonContactJointGetFirstContact (const NewtonJoint* const contactJoint);
NEWTON_API void* NewtonContactJointGetNextContact (const NewtonJoint* const contactJoint, void* const contact);
NEWTON_API int NewtonContactJointGetContactCount(const NewtonJoint* const contactJoint);
NEWTON_API void NewtonContactJointRemoveContact(const NewtonJoint* const contactJoint, void* const contact);
NEWTON_API NewtonMaterial* NewtonContactGetMaterial (const void* const contact);
NEWTON_API void  NewtonBodyAddBuoyancyForce (const NewtonBody* const body, dFloat fluidDensity,
                       dFloat fluidLinearViscosity, dFloat fluidAngularViscosity,
                       const dFloat* const gravityVector, NewtonGetBuoyancyPlane buoyancyPlane, void* const context);
// NEWTON_API void NewtonBodyForEachPolygonDo (const NewtonBody* const body, NewtonCollisionIterator callback);
NEWTON_API void NewtonBodyAddImpulse (const NewtonBody* const body, const dFloat* const pointDeltaVeloc, const dFloat* const pointPosit);
// **********************************************************************************************
//
// Common joint functions
//
// **********************************************************************************************
NEWTON_API void* NewtonJointGetUserData (const NewtonJoint* const joint);
NEWTON_API void NewtonJointSetUserData (const NewtonJoint* const joint, void* const userData);
NEWTON_API NewtonBody* NewtonJointGetBody0 (const NewtonJoint* const joint);
NEWTON_API NewtonBody* NewtonJointGetBody1 (const NewtonJoint* const joint);
NEWTON_API void NewtonJointGetInfo  (const NewtonJoint* const joint, NewtonJointRecord* const info);
NEWTON_API int NewtonJointGetCollisionState (const NewtonJoint* const joint);
NEWTON_API void NewtonJointSetCollisionState (const NewtonJoint* const joint, int state);
NEWTON_API dFloat NewtonJointGetStiffness (const NewtonJoint* const joint);
NEWTON_API void NewtonJointSetStiffness (const NewtonJoint* const joint, dFloat state);
NEWTON_API void NewtonDestroyJoint(const NewtonWorld* const newtonWorld, const NewtonJoint* const joint);
NEWTON_API void NewtonJointSetDestructor (const NewtonJoint* const joint, NewtonConstraintDestructor destructor);
// **********************************************************************************************
//
// Ball and Socket joint functions
//
// **********************************************************************************************
NEWTON_API NewtonJoint* NewtonConstraintCreateBall (const NewtonWorld* const newtonWorld, const dFloat* pivotPoint,
                          const NewtonBody* const childBody, const NewtonBody* const parentBody);
NEWTON_API void NewtonBallSetUserCallback (const NewtonJoint* const ball, NewtonBallCallBack callback);
NEWTON_API void NewtonBallGetJointAngle (const NewtonJoint* const ball, dFloat* angle);
NEWTON_API void NewtonBallGetJointOmega (const NewtonJoint* const ball, dFloat* omega);
NEWTON_API void NewtonBallGetJointForce (const NewtonJoint* const ball, dFloat* const force);
NEWTON_API void NewtonBallSetConeLimits (const NewtonJoint* const ball, const dFloat* pin, dFloat maxConeAngle, dFloat maxTwistAngle);
// **********************************************************************************************
//
// Hinge joint functions
//
// **********************************************************************************************
NEWTON_API NewtonJoint* NewtonConstraintCreateHinge (const NewtonWorld* const newtonWorld,
                           const dFloat* pivotPoint, const dFloat* pinDir,
                           const NewtonBody* const childBody, const NewtonBody* const parentBody);
NEWTON_API void NewtonHingeSetUserCallback (const NewtonJoint* const hinge, NewtonHingeCallBack callback);
NEWTON_API dFloat NewtonHingeGetJointAngle (const NewtonJoint* const hinge);
NEWTON_API dFloat NewtonHingeGetJointOmega (const NewtonJoint* const hinge);
NEWTON_API void NewtonHingeGetJointForce (const NewtonJoint* const hinge, dFloat* const force);
NEWTON_API dFloat NewtonHingeCalculateStopAlpha (const NewtonJoint* const hinge, const NewtonHingeSliderUpdateDesc* const desc, dFloat angle);
// **********************************************************************************************
//
// Slider joint functions
//
// **********************************************************************************************
NEWTON_API NewtonJoint* NewtonConstraintCreateSlider (const NewtonWorld* const newtonWorld,
                            const dFloat* pivotPoint, const dFloat* pinDir,
                            const NewtonBody* const childBody, const NewtonBody* const parentBody);
NEWTON_API void NewtonSliderSetUserCallback (const NewtonJoint* const slider, NewtonSliderCallBack callback);
NEWTON_API dFloat NewtonSliderGetJointPosit (const NewtonJoint* slider);
NEWTON_API dFloat NewtonSliderGetJointVeloc (const NewtonJoint* slider);
NEWTON_API void NewtonSliderGetJointForce (const NewtonJoint* const slider, dFloat* const force);
NEWTON_API dFloat NewtonSliderCalculateStopAccel (const NewtonJoint* const slider, const NewtonHingeSliderUpdateDesc* const desc, dFloat position);
// **********************************************************************************************
//
// Corkscrew joint functions
//
// **********************************************************************************************
NEWTON_API NewtonJoint* NewtonConstraintCreateCorkscrew (const NewtonWorld* const newtonWorld,
                             const dFloat* pivotPoint, const dFloat* pinDir,
                             const NewtonBody* const childBody, const NewtonBody* const parentBody);
NEWTON_API void NewtonCorkscrewSetUserCallback (const NewtonJoint* const corkscrew, NewtonCorkscrewCallBack callback);
NEWTON_API dFloat NewtonCorkscrewGetJointPosit (const NewtonJoint* const corkscrew);
NEWTON_API dFloat NewtonCorkscrewGetJointAngle (const NewtonJoint* const corkscrew);
NEWTON_API dFloat NewtonCorkscrewGetJointVeloc (const NewtonJoint* const corkscrew);
NEWTON_API dFloat NewtonCorkscrewGetJointOmega (const NewtonJoint* const corkscrew);