Src/Newt/NewtonDynamics_153/NewtonSource/bin/Newton_153.h

	NEWTON_API void NewtonBodyForEachPolygonDo (const NewtonBody* body, NewtonCollisionIterator callback);