Src/Newt/NewtonDynamics/Import/DllImports.cs


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetMatrix(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetRotation(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] rotation);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetMassMatrix(IntPtr body, ref float mass, ref float Ixx, ref float Iyy, ref float Izz);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetInvMass(IntPtr body, ref float invMass, ref float invIxx, ref float invIyy, ref float invIzz);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetOmega(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vector);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetVelocity(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vector);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetForce(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vector);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetTorque(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vector);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetForceAcc(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vector);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetTorqueAcc(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vector);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetCentreOfMass(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] com);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonBodyGetLinearDamping(IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetAngularDamping(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vector);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyGetAABB(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p1);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBodyGetFirstJoint(IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBodyGetNextJoint(IntPtr body, IntPtr joint);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBodyGetFirstContactJoint(IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonBodyGetNextContactJoint(IntPtr body, IntPtr contactJoint);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonContactJointGetFirstContact(IntPtr contactJoint);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonContactJointGetNextContact(IntPtr contactJoint, IntPtr contact);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonContactJointGetContactCount(IntPtr contactJoint);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonContactJointRemoveContact(IntPtr contactJoint, IntPtr contact);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonContactGetMaterial(IntPtr contact);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyAddBuoyancyForce(IntPtr body, float fluidDensity, float fluidLinearViscosity, float fluidAngularViscosity, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] gravityVector, NewtonGetBuoyancyPlane buoyancyPlane, IntPtr context);

		//	internal static extern void NewtonBodyForEachPolygonDo (IntPtr body, NewtonCollisionIterator callback);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBodyAddImpulse(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pointDeltaVeloc, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pointPosit);

		#endregion

		#region Common joint functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonJointGetUserData(IntPtr joint);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonJointSetUserData(IntPtr joint, IntPtr userData);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonJointGetBody0(IntPtr joint);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonJointGetBody1(IntPtr joint);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonJointGetInfo(IntPtr joint, IntPtr info);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonJointGetCollisionState(IntPtr joint);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonJointSetCollisionState(IntPtr joint, int state);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonJointGetStiffness(IntPtr joint);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonJointSetStiffness(IntPtr joint, float stiffness);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonDestroyJoint(IntPtr newtonWorld, IntPtr joint);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonJointSetDestructor(IntPtr joint, NewtonConstraintDestructor destructor);

		#endregion
		#region Ball and Socket joint functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonConstraintCreateBall(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pivotPoint, IntPtr childBody, IntPtr parentBody);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBallSetUserCallback(IntPtr ball, NewtonBallCallBack callback);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBallGetJointAngle(IntPtr ball, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] angle);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBallGetJointOmega(IntPtr ball, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] omega);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBallGetJointForce(IntPtr ball, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] force);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonBallSetConeLimits(IntPtr ball, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pin, float maxConeAngle, float maxTwistAngle);

		#endregion
		#region Hinge joint functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonConstraintCreateHinge(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pivotPoint, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pinDir, IntPtr childBody, IntPtr parentBody);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonHingeSetUserCallback(IntPtr hinge, NewtonHingeCallBack callback);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonHingeGetJointAngle(IntPtr hinge);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonHingeGetJointOmega(IntPtr hinge);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonHingeGetJointForce(IntPtr hinge, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] force);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonHingeCalculateStopAlpha(IntPtr hinge, IntPtr desc, float angle);

		#endregion
		#region Slider joint functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonConstraintCreateSlider(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pivotPoint, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pinDir, IntPtr childBody, IntPtr parentBody);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSliderSetUserCallback(IntPtr slider, NewtonSliderCallBack callback);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonSliderGetJointPosit(IntPtr slider);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonSliderGetJointVeloc(IntPtr slider);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSliderGetJointForce(IntPtr slider, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] force);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonSliderCalculateStopAccel(IntPtr slider, IntPtr desc, float position);

		#endregion
		#region Corkscrew joint functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonConstraintCreateCorkscrew(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pivotPoint, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pinDir, IntPtr childBody, IntPtr parentBody);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCorkscrewSetUserCallback(IntPtr corkscrew, NewtonCorkscrewCallBack callback);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonCorkscrewGetJointPosit(IntPtr corkscrew);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonCorkscrewGetJointAngle(IntPtr corkscrew);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonCorkscrewGetJointVeloc(IntPtr corkscrew);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonCorkscrewGetJointOmega(IntPtr corkscrew);
